# frigate_plate_recognizer

./: .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  builddev  coverage.xml  fake_event.js  fake_event.json  index.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  test.py
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml  deploy.yaml  deploy.yml  develop.yml  docker-build.yml  production.yml  sonar.yaml  tag.yaml  test.yaml
frigate_plate_recognizer/: __init__.py  app.py  config.py  event_filters.py  events.py  healthcheck.py  http_client.py  images.py  messaging.py  metrics.py  pipeline.py  recognition.py  storage.py
frigate_plate_recognizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_config.py  test_healthcheck.py  test_http_client.py  test_recognition.py  test_runtime.py
